include/digitor/digitor.h

typedef enum DigitorResult {
    DIGITOR_RESULT_OK = 0,
    DIGITOR_RESULT_INVALID_ARGUMENT = 1,
    DIGITOR_RESULT_NOT_INITIALIZED = 2,
    DIGITOR_RESULT_ALREADY_INITIALIZED = 3,
    DIGITOR_RESULT_BACKEND_UNAVAILABLE = 4,
    DIGITOR_RESULT_UNSUPPORTED = 5,
    DIGITOR_RESULT_RESOURCE_IN_USE = 6,
    DIGITOR_RESULT_OUT_OF_MEMORY = 7,
    DIGITOR_RESULT_INTERNAL_ERROR = 100
} DigitorResult;
typedef struct DigitorNodeGraph DigitorNodeGraph;
typedef uint64_t DigitorNodeId;
typedef struct DigitorNodePosition { float x; float y; } DigitorNodePosition;
typedef struct DigitorPrimaryWheelsControls {
    DigitorRgb lift; float lift_master; uint8_t lift_enabled;
    DigitorRgb gamma; float gamma_master; uint8_t gamma_enabled;
    DigitorRgb gain; float gain_master; uint8_t gain_enabled;
    DigitorRgb offset; float offset_master; uint8_t offset_enabled;
} DigitorPrimaryWheelsControls;
typedef struct DigitorLogWheelsControls {
    DigitorLogWheelControl shadows, midtones, highlights, global;
    float shadow_pivot, highlight_pivot, transition_width;
} DigitorLogWheelsControls;
typedef struct DigitorRgbCurvesControls {
    DigitorCurveChannel master, red, green, blue; uint32_t lut_size;
} DigitorRgbCurvesControls;
typedef struct DigitorHslQualifierControls {
    DigitorQualifierRange hue, saturation, luminance;
    float blur, denoise, clean_black, clean_white; uint8_t invert; uint8_t matte_output;
} DigitorHslQualifierControls;
typedef struct DigitorLut1DControls { const DigitorLutColor* values; uint32_t value_count; DigitorLutInterpolation interpolation; } DigitorLut1DControls;
typedef struct DigitorLut3DControls { uint32_t size; const DigitorLutColor* values; uint64_t value_count; DigitorLutInterpolation interpolation; } DigitorLut3DControls;
typedef struct DigitorNodeEffectSettings { DigitorNodeEffectType type; float amount; float radius; float angle; uint64_t seed; } DigitorNodeEffectSettings;
typedef struct DigitorPowerWindowSettings {
    DigitorPowerWindowShape shape; float center_x, center_y, width, height, rotation, feather, opacity; uint8_t invert;
} DigitorPowerWindowSettings;
/* Production node graph C ABI. IDs are stable for the graph lifetime. Input,
 * output and mixer nodes are not selectable. JSON is deterministic and can be
 * requested with buffer == NULL to obtain the required byte count. */
DIGITOR_API DigitorResult digitor_node_graph_create(DigitorNodeGraph** out_graph);
DIGITOR_API DigitorResult digitor_node_graph_destroy(DigitorNodeGraph* graph);
DIGITOR_API DigitorResult digitor_node_graph_get_endpoints(DigitorNodeGraph* graph, DigitorNodeId* out_input, DigitorNodeId* out_output);
DIGITOR_API DigitorResult digitor_node_graph_select(DigitorNodeGraph* graph, DigitorNodeId node);
DIGITOR_API DigitorResult digitor_node_graph_get_selected(DigitorNodeGraph* graph, DigitorNodeId* out_node);
DIGITOR_API DigitorResult digitor_node_graph_add_serial_after(DigitorNodeGraph* graph, DigitorNodeId after, const char* name, DigitorNodeId* out_node);
DIGITOR_API DigitorResult digitor_node_graph_add_parallel_after(DigitorNodeGraph* graph, DigitorNodeId after, const char* first_name, const char* second_name, DigitorNodeId* out_first, DigitorNodeId* out_second);
DIGITOR_API DigitorResult digitor_node_graph_convert_to_parallel(DigitorNodeGraph* graph, DigitorNodeId existing, const char* branch_name, DigitorNodeId* out_branch);
DIGITOR_API DigitorResult digitor_node_graph_remove(DigitorNodeGraph* graph, DigitorNodeId node);
DIGITOR_API DigitorResult digitor_node_graph_connect(DigitorNodeGraph* graph, DigitorNodeId source, DigitorNodeId destination);
DIGITOR_API DigitorResult digitor_node_graph_disconnect(DigitorNodeGraph* graph, DigitorNodeId source, DigitorNodeId destination);
DIGITOR_API DigitorResult digitor_node_graph_set_position(DigitorNodeGraph* graph, DigitorNodeId node, DigitorNodePosition position);
DIGITOR_API DigitorResult digitor_node_graph_set_enabled(DigitorNodeGraph* graph, DigitorNodeId node, uint8_t enabled);
DIGITOR_API DigitorResult digitor_node_graph_set_bypassed(DigitorNodeGraph* graph, DigitorNodeId node, uint8_t bypassed);
DIGITOR_API DigitorResult digitor_node_graph_clear_operations(DigitorNodeGraph* graph, DigitorNodeId node);
DIGITOR_API DigitorResult digitor_node_graph_add_primary_wheels(DigitorNodeGraph* graph, const DigitorPrimaryWheelsControls* controls);
DIGITOR_API DigitorResult digitor_node_graph_add_log_wheels(DigitorNodeGraph* graph, const DigitorLogWheelsControls* controls);
DIGITOR_API DigitorResult digitor_node_graph_add_rgb_curves(DigitorNodeGraph* graph, const DigitorRgbCurvesControls* controls);
DIGITOR_API DigitorResult digitor_node_graph_add_hsl_qualifier(DigitorNodeGraph* graph, const DigitorHslQualifierControls* controls);
DIGITOR_API DigitorResult digitor_node_graph_add_lut1d(DigitorNodeGraph* graph, const DigitorLut1DControls* controls);
DIGITOR_API DigitorResult digitor_node_graph_add_lut3d(DigitorNodeGraph* graph, const DigitorLut3DControls* controls);
DIGITOR_API DigitorResult digitor_node_graph_add_effect(DigitorNodeGraph* graph, const DigitorNodeEffectSettings* settings);
DIGITOR_API DigitorResult digitor_node_graph_add_power_window(DigitorNodeGraph* graph, const DigitorPowerWindowSettings* settings);
DIGITOR_API DigitorResult digitor_node_graph_recipe_identity(DigitorNodeGraph* graph, char* buffer, uint64_t buffer_size, uint64_t* out_required);
DIGITOR_API DigitorResult digitor_node_graph_to_json(DigitorNodeGraph* graph, char* buffer, uint64_t buffer_size, uint64_t* out_required);